# suptest

./: .gitignore  COPYRIGHT  Cargo.toml  Cargobase.toml  README.md
.github/workflows/: clippy.yml  rust.yml
src/: lib.rs  naming.rs
tests/: test_meta.rs  test_sanity.rs
